[project]
name = "kia-android-widget"
version = "0.1.0"
description = "Kia Vehicle Control API"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "hyundai-kia-connect-api==4.23.0",
    "requests>=2.31.0",
    "tzdata>=2023.3",
    "gunicorn>=21.2.0",
    "dnspython>=2.4.0",
]

[tool.uv]
# Exclude the PyPI 'uuid' package - it's Python 2 only and conflicts with
# Python 3's built-in uuid module. hyundai-kia-connect-api incorrectly lists
# it as a dependency but actually uses the stdlib uuid.
override-dependencies = ["uuid ; python_version < '2'"]
